# robo-poster

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/accounts/: mod.rs
backend/src/auth/: middleware.rs  mod.rs
backend/src/db/: mod.rs
backend/src/meta/: mod.rs
backend/src/posts/: mod.rs
backend/src/premium/: mod.rs
backend/src/scheduler/: mod.rs
backend/tests/: auth_tests.rs  meta_tests.rs  posts_tests.rs
docs/05-06-2026/: backend.md  bugs.md  frontend.md
frontend/: elm.json
frontend/public/: index.html
frontend/src/: Api.elm  Main.elm  Types.elm
openspec/specs/api-documentation/: proposal.md
openspec/specs/auth/: design.md  proposal.md
openspec/specs/post-publishing/: spec.md
openspec/specs/premium-client/: spec.md
openspec/specs/production-readiness/: design.md  proposal.md  spec.md  tasks.md
openspec/specs/scheduling/: spec.md
openspec/specs/security-tests/: design.md  proposal.md  spec.md  tasks.md
poster-core/: .gitignore  README.md
poster-core/backend/: .env.example
poster-core/backend/src/: error.rs  main.rs
poster-core/backend/src/accounts/: mod.rs
poster-core/backend/src/auth/: middleware.rs  mod.rs
poster-core/backend/src/meta/: mod.rs
poster-core/backend/src/posts/: mod.rs
poster-core/backend/src/premium/: mod.rs
poster-core/backend/src/scheduler/: mod.rs
poster-core/frontend/public/: index.html
poster-core/frontend/src/: Api.elm  Main.elm  Types.elm
poster-core/openspec/specs/auth/: spec.md  tasks.md
poster-core/openspec/specs/meta-oauth/: spec.md
